--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ dependencies:
   # Internationalization
   intl: ^0.20.1
 
+  # Firebase
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  firebase_auth: ^5.3.2
+  firebase_storage: ^12.3.3
+  cloud_functions: ^5.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
